<?xml version="1.0"?>
<package format="3">
  <name>sam3_ros_wrapper</name>
  <version>0.0.0</version>
  <description>The sam3_ros_wrapper package</description>

  <maintainer email="pash0302@gmail.com">psh</maintainer>

  <license>Under SAM3 License</license>

  <build_depend>ros_environment</build_depend>

  <!-- ROS1 -->
  <buildtool_depend condition="$ROS_VERSION == 1">catkin</buildtool_depend>
  <depend condition="$ROS_VERSION == 1">roscpp</depend>

  <!-- ROS2 -->
  <buildtool_depend condition="$ROS_VERSION == 2">ament_cmake</buildtool_depend>
  <depend condition="$ROS_VERSION == 2">rclcpp</depend>

  <!-- Common -->
  <depend>nav_msgs</depend>

  <export>
    <build_type condition="$ROS_VERSION == 1">catkin</build_type>
    <build_type condition="$ROS_VERSION == 2">ament_cmake</build_type>
  </export>
</package>